--- a/myproject.html
+++ b/myproject.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <h1>Annyeong</h1>
+    <div><img src="anya-forger.jpg" alt="waku waku!"
+    style="width:50%;max-width:960px"></div>
+    <p>It is said Spy x Family is coming back on October. Yay!</p>
     <p>This is Zayrah Nicole! &lt;3</p>
 </body>
 </html>
