--- a/myproject.html
+++ b/myproject.html
@@ -10,5 +10,8 @@
     style="width:50%;max-width:960px"></div>
     <p>It is said Spy x Family is coming back on October. Yay!</p>
     <p>This is Zayrah Nicole! &lt;3</p>
+
+    <div><img src="anya-smirking.jpg" alt="Heh."
+    style="width:50%;max-width:960px"></div>
 </body>
 </html>
